Archive2/6a/1b696b1e9c12dc/output
main.c:8:6: error: conflicting types for 'f'
 void f(char* c) {
      ^
main.c:1:6: note: previous declaration of 'f' was here
 void f(const char*);
      ^
